<resources>
    <string name="app_name">Kata</string>
    <string name="this_in_lifecycle_app">This is app lifecycle\n</string>
    <string name="on_create">onCreate()</string>
    <string name="on_create_view">onCreateView()</string>
    <string name="on_view_created">onViewCreated()</string>
    <string name="on_start">onStart()</string>
    <string name="on_resume">onResume()</string>
    <string name="on_stop">onStop()</string>
    <string name="on_pause">onPause()</string>
    <string name="on_destroy">onDestroy()</string>
    <string name="on_destroy_view">onDestroyView()</string>
    <string name="on_restart">onRestart()</string>
    <string name="end_saved_instance_logs">END_SAVED_INSTANCE_LOGS</string>
    <string name="on_restore_instance_state">onRestoreInstanceState()</string>
    <string name="on_save_instance_state">onSaveInstanceState()</string>
    <string name="on_state_not_saved">onStateNotSaved()</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="replace">Replace</string>
    <string name="remove">Remove</string>
    <string name="close">Back</string>
    <string name="dialog_canceled">dialog_canceled</string>
    <string name="ok">OK</string>
    <string name="dialog_positive">dialog_positive</string>
    <string name="new_activity">New Activity</string>
    <string name="show_fragment1">Show Fr 1</string>
    <string name="show_fragment2">Show Fr 2</string>
    <string name="get_from_shared_prefs">Sh Pr Logs</string>
    <string name="clear_logs">Clear Logs</string>
    <string name="save_to_sp">Sh Pr On</string>
    <string name="clear_sp">Sh Pr Off</string>
    <string name="simple_alert_dialog">My simple Alert Dialog</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="new_appcompatactivity">New AppCompatActivity</string>
    <string name="update_simple_repo">Update data</string>
    <string name="jobs_info">Jobs Info</string>
    <string name="get">Get data</string>
</resources>